<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".HomeActivity">
    
    <Button
        android:id="@+id/facilities_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/facilities_btn"/>
    
    <Button 
        android:id="@+id/physician_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/physicians_btn"/>
    
    <Button 
        android:id="@+id/map_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/map_btn"/>
    
    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/home_screen_logo"/>

</LinearLayout>
